# archward

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml
docs/: architecture.md  cli.md  development.md  hooks.md  plugins.md  recovery.md
docs/examples/archward-verify-zerotier/: README.md  archward_verify_zerotier.py  pyproject.toml
docs/examples/archward-verify-zerotier/tests/: test_zerotier.py
man/: archward.1
packaging/: .SRCINFO  .gitignore  PKGBUILD  archward.desktop
src/archward/: __main__.py  app.py  cli.py  events.py  logging_setup.py
src/archward/aur/: helper.py  metadata.py  pkgbuild_cache.py  prefetch.py  quarantine.py
src/archward/cli_subcommands/: __init__.py  aur.py  pacnew.py  rollback.py  snapshot.py  verify.py
src/archward/config/: defaults.py  detect.py  diff.py  loader.py  paths.py
src/archward/data/: __init__.py  stale_libs_scan
src/archward/models/: aur.py  config.py  gate.py  hook.py  pacnew.py  snapshot.py  update.py  verify.py
src/archward/pacman/: pacnew.py  prompts.py  query.py  (+1 more)
tests/fixtures/: README.md
tests/unit/: test_after_snapshot.py  test_arch_news.py  test_aur_adapter_yay.py  test_aur_helper.py  test_aur_metadata.py  test_aur_quarantine.py  test_boot_integrity.py  test_build_failure_scan.py  test_bulk_rollback.py  test_cache_policy.py  test_cache_safety_verify.py  test_cache_tab.py  test_cli_dispatch.py  test_cli_pacnew.py  test_cli_rollback.py  test_cli_snapshot.py  test_cli_verify.py  test_config_diff.py  test_config_loader.py  test_decide_high_risk.py  test_detect.py  test_gates_preflight.py  test_hook_templates.py  test_hooks.py  test_main_window_sudo_warmup.py  test_notify.py  test_package_delta.py  test_pacman_ignore.py  test_pacman_runner_pty.py  test_pacnew_apply.py  test_pacnew_strategy.py  test_paths.py  test_persistent_state.py  test_pkgbuild_cache.py  test_pkgbuild_review_dialog.py  test_preferences_pacnew_tab.py  test_prefetch.py  test_prompt_detection.py  test_reboot_log_timeout.py  test_reliability_timeouts.py  (+19 more)
(+57 files in other folders)
