[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "archward"
version = "0.4.7"
description = "A safe-update GUI for Arch-based Linux distributions"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "indyfive11" }]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "tomli-w>=1.0",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.6",
]
dev = [
  "pytest>=8.0",
  "pytest-qt>=4.4",
]

[project.scripts]
archward = "archward.cli:main"

[project.gui-scripts]
archward-gui = "archward.cli:main_gui"

[tool.hatch.build.targets.wheel]
packages = ["src/archward"]
